Updated ftb java arguments